# email-validator

./: Cargo.toml  README.md
src/: lib.rs
